# ExternalSort

./: .gitignore  CMakeLists.txt  commandlinearg.cpp  commandlinearg.h  externalsort.cpp  externalsort.h  main.cpp  mergefile.cpp  mergefile.h  partfile.cpp  partfile.h  sortfile.cpp  sortfile.h  sortmanager.cpp  sortmanager.h
iface/: ilog.cpp  ilog.h  inputdata.cpp  inputdata.h  ioptions.cpp  ioptions.h  isorting.cpp  isorting.h
pfile/: exceptfile.cpp  exceptfile.h  fileline.cpp  fileline.h  mergefile.cpp  mergefile.h  sortfile.cpp  sortfile.h  splitfile.cpp  splitfile.h
